--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node scripts/dev.js reactivity -f global"
+    "dev": "node scripts/dev.js"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +13,5 @@
     "esbuild": "^0.14.49",
     "minimist": "^1.2.6",
     "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "vue": "^3.2.37"
   }
 }
